--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,24 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": [
+        "./components/*"
+      ],
+      "@screens/*": [
+        "screens/*"
+      ],
+      "@gStyle": [
+        "./styles.ts"
+      ],
+      "@hooks": [
+        "hooks/*"
+      ],
+      "@assets": [
+        "./assets/*"
+      ]
+    }
   }
 }
